--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "buildCommand": "pnpm run build",
-  "installCommand": "corepack enable && corepack prepare pnpm@9.0.0 --activate && corepack pnpm install",
+  "installCommand": "corepack enable && corepack prepare pnpm@9.0.0 --activate && corepack pnpm install --no-strict-engine-check",
   "framework": null
 }
