--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "altinbasakweb",
   "version": "1.0.0",
   "private": true,
-  "packageManager": "pnpm@9.0.0",
+  "packageManager": "pnpm@9.15.5",
   "engines": {
-    "node": ">=20.0.0"
+    "node": "20.x"
   },
   "scripts": {
     "dev": "pnpm --parallel -r --filter \"./apps/*\" dev",
