--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "buildCommand": "pnpm run build",
-  "installCommand": "corepack enable && corepack prepare pnpm@9.0.0 --activate && export PATH=\"$(corepack pnpm bin):$PATH\" && pnpm install",
+  "installCommand": "corepack enable && corepack prepare pnpm@9.15.5 --activate && pnpm install",
   "framework": null
 }
