--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,4 +1,5 @@
 {
+  "packageManager": "pnpm@9.15.5",
   "name": "altinbasak-admin",
   "version": "1.0.0",
   "description": "Premium Admin Panel Template for Next.js projects",
